--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "bestiarium-heroku-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "API for a DnD Bestiary",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js",
-    "heroku-postbuild": "cd client && npm i && npm run build"
+    "server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.25.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "@types/jest": "^26.0.22",
+    "cross-env": "^7.0.3",
+    "jest": "^26.6.3",
+    "knex-cleaner": "^1.3.1",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
     "dotenv": "^9.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "sqlite3": "^5.0.2",
+    "yup": "^0.32.9"
   }
 }
