--- a/package.json
+++ b/package.json
@@ -5,23 +5,27 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.25.0",
-    "nodemon": "^2.0.7",
     "@types/jest": "^26.0.22",
     "cross-env": "^7.0.3",
+    "eslint": "^7.25.0",
     "jest": "^26.6.3",
     "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.7",
     "supertest": "^6.1.3"
   },
   "dependencies": {
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.4",
     "sqlite3": "^5.0.2",
     "yup": "^0.32.9"
